--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "my-portfolio",
   "version": "0.0.1",
   "private": true,
+  "homepage": "https://IshfatAbrar.github.io/Portfolio",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.17",
